Pipeline variables comments and clean up (#211)
* adding comments for variables

* update default model name

--- a/.pipelines/azdo-abtest-pipeline.yml
+++ b/.pipelines/azdo-abtest-pipeline.yml
@@ -28,7 +28,7 @@ variables:
 - name: 'greenReleaseName'
   value: 'model-green'
 - name: 'SCORE_SCRIPT'
-  value: 'scoreA.py'
+  value: 'scoring/scoreA.py'
 
 stages:
 - stage: 'Building'
