--- a/.pipelines/abtest.yml
+++ b/.pipelines/abtest.yml
@@ -69,7 +69,7 @@ stages:
               IMAGE_LOCATION="$(cat $(Pipeline.Workspace)/image_location/image_location.txt)"
               echo "##vso[task.setvariable variable=IMAGE_LOCATION]$IMAGE_LOCATION"
             displayName: 'Get Image Location'
-          - template: azdo-helm-upgrade.yml
+          - template: helm-upgrade-template.yml
             parameters:
               chartPath: '$(Pipeline.Workspace)/allcharts/abtest-model'
               releaseName: $(blueReleaseName) 
@@ -81,7 +81,7 @@ stages:
     displayName: 50 50 rollout to blue environment
     timeoutInMinutes: 0
     steps:
-    - template: azdo-helm-upgrade.yml
+    - template: helm-upgrade-template.yml
       parameters:
         chartPath: '$(System.DefaultWorkingDirectory)/charts/abtest-istio'
         releaseName: 'abtest-istio' 
@@ -96,7 +96,7 @@ stages:
       runOnce:
         deploy:
           steps:
-          - template: azdo-helm-upgrade.yml
+          - template: helm-upgrade-template.yml
             parameters:
               chartPath: '$(Pipeline.Workspace)/allcharts/abtest-istio'
               releaseName: 'abtest-istio' 
@@ -113,7 +113,7 @@ stages:
       runOnce:
         deploy:
           steps:
-          - template: azdo-helm-upgrade.yml
+          - template: helm-upgrade-template.yml
             parameters:
               chartPath: '$(Pipeline.Workspace)/allcharts/abtest-istio'
               releaseName: 'abtest-istio' 
@@ -134,7 +134,7 @@ stages:
               IMAGE_LOCATION="$(cat $(Pipeline.Workspace)/image_location/image_location.txt)"
               echo "##vso[task.setvariable variable=IMAGE_LOCATION]$IMAGE_LOCATION"
             displayName: 'Get Image Location'
-          - template: azdo-helm-upgrade.yml
+          - template: helm-upgrade-template.yml
             parameters:
               chartPath: '$(Pipeline.Workspace)/allcharts/abtest-model'
               releaseName: $(greenReleaseName) 
@@ -145,7 +145,7 @@ stages:
   - job: 'Prod_Rollout_100'
     timeoutInMinutes: 0
     steps:
-    - template: azdo-helm-upgrade.yml
+    - template: helm-upgrade-template.yml
       parameters:
         chartPath: '$(System.DefaultWorkingDirectory)/charts/abtest-istio'
         releaseName: 'abtest-istio' 
@@ -157,7 +157,7 @@ stages:
   - job: 'blue_disable'
     timeoutInMinutes: 0
     steps:
-    - template: azdo-helm-install.yml
+    - template: helm-install-template.yml
     - task: HelmDeploy@0
       displayName: 'helm uninstall blue'
       inputs:
