--- a/.env.example
+++ b/.env.example
@@ -31,6 +31,8 @@ EVALUATE_SCRIPT_PATH = 'evaluate/evaluate_model.py'
 REGISTER_SCRIPT_PATH = 'register/register_model.py'
 SOURCES_DIR_TRAIN = 'diabetes_regression'
 DATASET_NAME = 'diabetes_ds'
+DATASET_VERSION = 'latest'
+DATASTORE_NAME = 'datablobstore'
 SCORE_SCRIPT = 'scoring/score.py'
 
 # Optional. Used by a training pipeline with R on Databricks
