--- a/.env.example
+++ b/.env.example
@@ -32,7 +32,8 @@ REGISTER_SCRIPT_PATH = 'register/register_model.py'
 SOURCES_DIR_TRAIN = 'diabetes_regression'
 DATASET_NAME = 'diabetes_ds'
 DATASET_VERSION = 'latest'
-DATASTORE_NAME = 'datablobstore'
+# Optional. Set it if you have configured non default datastore to point to your data
+DATASTORE_NAME = ''
 SCORE_SCRIPT = 'scoring/score.py'
 
 # Optional. Used by a training pipeline with R on Databricks
