--- a/.pipelines/diabetes_regression-variables-template.yml
+++ b/.pipelines/diabetes_regression-variables-template.yml
@@ -23,8 +23,9 @@ variables:
     value: mlopspython
   - name: DATASET_NAME
     value: diabetes_ds
-  - name: DATASTORE_NAME
-    value: datablobstore
+  # Uncomment DATASTORE_NAME if you have configured non default datastore to point to your data   
+  # - name: DATASTORE_NAME
+  #   value: datablobstore
   - name: DATASET_VERSION
     value: latest
   - name: TRAINING_PIPELINE_NAME
