--- a/.pipelines/diabetes_regression-variables-template.yml
+++ b/.pipelines/diabetes_regression-variables-template.yml
@@ -29,6 +29,8 @@ variables:
     value: diabetes_regression_model.pkl
 
   # AML Compute Cluster Config
+  - name: AML_ENV_NAME
+    value: diabetes_regression_training_env
   - name: AML_COMPUTE_CLUSTER_CPU_SKU
     value: STANDARD_DS2_V2
   - name: AML_COMPUTE_CLUSTER_NAME
