flag examples + tiny docs

--- a/.env.example
+++ b/.env.example
@@ -48,3 +48,6 @@ RUN_EVALUATION = 'true'
 
 # Set to true cancels the Azure ML pipeline run when evaluation criteria are not met.
 ALLOW_RUN_CANCEL = 'true'
+
+# Flag to allow rebuilding the AML Environment after it was built for the first time. This enables dependency updates from conda_dependencies.yaml.
+AML_REBUILD_ENVIRONMENT = 'false'
