--- a/.pipelines/diabetes_regression-variables-template.yml
+++ b/.pipelines/diabetes_regression-variables-template.yml
@@ -67,3 +67,8 @@ variables:
     # to skip training and deploy a model registered by a previous build.
   - name: modelbuildid
     value: $[coalesce(variables['MODEL_BUILD_ID'], variables['Build.BuildId'])]
+
+  
+  # Flag to allow rebuilding the AML Environment after it was built for the first time. This enables dependency updates from conda_dependencies.yaml.
+  # - name: AML_REBUILD_ENVIRONMENT
+  #  value: "false"
