--- a/diabetes_regression/conda_dependencies.yml
+++ b/diabetes_regression/conda_dependencies.yml
@@ -25,16 +25,15 @@ dependencies:
 
   - pip:
       # Required packages for AzureML execution, history, and data preparation.
-      - azureml-model-management-sdk==1.0.1b6.post1
       - azureml-sdk==1.1.5.1
-      - scipy==1.3.1
+      - scipy==1.4.1
       - scikit-learn==0.22
-      - pandas==0.25.3
-      - numpy==1.17.3
-      - joblib==0.14.0
-      - gunicorn==19.9.0
+      - pandas==1.0.2
+      - numpy==1.18.1
+      - joblib==0.14.1
+      - gunicorn==20.0.4
       - flask==1.1.1
-      - inference-schema[numpy-support]
-      - azure
-      - azure-storage-blob
-      - azureml-dataprep
+      - inference-schema[numpy-support]==1.0.2
+      - azure==4.0.0
+      - azure-storage-blob==12.3.0
+      - azureml-dataprep==1.3.5
