--- a/environment_setup/docker-image-pipeline.yml
+++ b/environment_setup/docker-image-pipeline.yml
@@ -17,8 +17,8 @@ trigger:
 variables:
   containerRegistry: $[coalesce(variables['acrServiceConnection'], 'acrconnection')]
   imageName: $[coalesce(variables['agentImageName'], 'public/mlops/python')]
-  amlsdkversion: $[coalesce(variables['amlsdkversion'], 'latest')]  
-  githubrelease: $[coalesce(variables['githubrelease'], 'latest')]  
+  amlsdkversion: $[coalesce(variables['amlsdkversion'], '1.1.5.1')]  
+  githubrelease: $[coalesce(variables['githubrelease'], '131681')]  
 
 steps:
   - task: Docker@2
