--- a/environment_setup/docker-image-pipeline.yml
+++ b/environment_setup/docker-image-pipeline.yml
@@ -17,8 +17,8 @@ trigger:
 variables:
   containerRegistry: $[coalesce(variables['acrServiceConnection'], 'acrconnection')]
   imageName: $[coalesce(variables['agentImageName'], 'public/mlops/python')]
-  amlsdkversion: format('amlsdk{0}', $[coalesce(variables['amlsdkversion'], '1.1.5.1')])   
-  githubrelease: format('githubrelease{0}', $[coalesce(variables['githubrelease'], '131681')])   
+  amlsdkversion: $[coalesce(variables['amlsdkversion'], '1.1.5.1')]   
+  githubrelease: $[coalesce(variables['githubrelease'], '131681')]   
   
 steps:
   - task: Docker@2
@@ -28,7 +28,7 @@ steps:
       containerRegistry: '$(containerRegistry)'
       repository: '$(imageName)'
       tags: |
-       $(amlsdkversion)
-       $(githubrelease)
+       format('amlsdk{0}',$(amlsdkversion))
+       format('githubrelease{0}',$(githubrelease))
       buildContext: '$(Build.SourcesDirectory)' 
       dockerFile: '$(Build.SourcesDirectory)/environment_setup/Dockerfile'
