--- a/environment_setup/docker-image-pipeline.yml
+++ b/environment_setup/docker-image-pipeline.yml
@@ -17,8 +17,8 @@ trigger:
 variables:
   containerRegistry: $[coalesce(variables['acrServiceConnection'], 'acrconnection')]
   imageName: $[coalesce(variables['agentImageName'], 'public/mlops/python')]
-  amlsdkversion: $[format('amlsdk{0}',coalesce(variables['amlsdkversion'], '1.1.5.1'))]   
-  githubrelease: $[format('githubrelease{0}',coalesce(variables['githubrelease'], '131681'))]   
+  amlsdkversion: $[format('amlsdk{0}',variables['amlsdkversion'])]   
+  githubrelease: $[format('githubrelease{0}',variables['githubrelease'])]   
     
 steps:
   - task: Docker@2
