--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,7 +16,7 @@ jobs:
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
     # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-    - uses: actions/checkout@v2flake8 --output-file=lint-testresults.xml --format junit-xml
+    - uses: actions/checkout@v2
 
     # Runs a single command using the runners shell
     - name: Run lint tests
