--- a/diabetes_regression/ci_dependencies.yml
+++ b/diabetes_regression/ci_dependencies.yml
@@ -5,24 +5,24 @@ dependencies:
   - python=3.7.*
 
   # dependencies with versions aligned with conda_dependencies.yml.
-  - numpy
-  - pandas
-  - scikit-learn
+  - numpy=1.18.*
+  - pandas=1.0.*
+  - scikit-learn=0.22.*
     # dependencies for MLOps with R.
   - r=3.6.0
   - r-essentials=3.6.0
 
-  - pip
+  - pip=20.0.*
 
   - pip:
       # dependencies with versions aligned with conda_dependencies.yml.
       - azureml-sdk==1.2.*
 
       # Additional pip dependencies for the CI environment.
-      - pytest
-      - pytest-cov
-      - requests
-      - python-dotenv
-      - flake8
-      - flake8_formatter_junit_xml
-      - azure-cli
+      - pytest==5.4.*
+      - pytest-cov==2.8.*
+      - requests==2.23.*
+      - python-dotenv==0.12.*
+      - flake8==3.7.*
+      - flake8_formatter_junit_xml==0.0.*
+      - azure-cli==2.3.*
