--- a/environment_setup/iac-create-environment-pipeline-tf.yml
+++ b/environment_setup/iac-create-environment-pipeline-tf.yml
@@ -49,6 +49,17 @@ steps:
     workingDirectory: '$(Build.SourcesDirectory)/environment_setup/tf-templates'
 
 - task: charleszipp.azure-pipelines-tasks-terraform.azure-pipelines-tasks-terraform-cli.TerraformCLI@0
+  displayName: 'TF plan - Deploy MLOps resources to Azure'
+  inputs:
+    command: plan
+    workingDirectory: '$(Build.SourcesDirectory)/environment_setup/tf-templates'
+    environmentServiceName: $(AZURE_RM_SVC_CONNECTION)
+  env:
+    TF_VAR_BASE_NAME: $(BASE_NAME)
+    TF_VAR_RESOURCE_GROUP: $(RESOURCE_GROUP)
+    TF_VAR_WORKSPACE_NAME: $(WORKSPACE_NAME)
+
+- task: charleszipp.azure-pipelines-tasks-terraform.azure-pipelines-tasks-terraform-cli.TerraformCLI@0
   displayName: 'TF apply - Deploy MLOps resources to Azure'
   inputs:
     command: apply
