--- a/.pipelines/diabetes_regression-train-register.yml
+++ b/.pipelines/diabetes_regression-train-register.yml
@@ -1,9 +1,10 @@
-# Continuous Integration (CI) pipeline that orchestrates the training, evaluation, registration, deployment, and testing of the diabetes_regression model.
+# Continuous Integration (CI) pipeline that orchestrates the training, evaluation, and registration of the diabetes_regression model.
 
 resources:
   containers:
   - container: mlops
-    image: mcr.microsoft.com/mlops/python:latest
+    image: mlops/diabetes_regression
+    endpoint: acrconnection
 
 pr: none
 trigger:
@@ -27,7 +28,6 @@ pool:
 stages:
 - stage: 'Model_CI'
   displayName: 'Model CI'
-  condition: not(variables['MODEL_BUILD_ID'])
   jobs:
   - job: "Model_CI_Pipeline"
     displayName: "Model CI Pipeline"
@@ -49,7 +49,7 @@ stages:
 
 - stage: 'Trigger_AML_Pipeline'
   displayName: 'Train model'
-  condition: and(succeeded(), not(variables['MODEL_BUILD_ID']))
+  condition: succeeded()
   variables:
     BUILD_URI: '$(SYSTEM.COLLECTIONURI)$(SYSTEM.TEAMPROJECT)/_build/results?buildId=$(BUILD.BUILDID)'
   jobs:
@@ -91,7 +91,7 @@ stages:
   - job: "Training_Run_Report"
     dependsOn: "Run_ML_Pipeline"
     condition: always()
-    displayName: "Determine if evaluation succeeded and publish artifact if new model is registered"
+    displayName: "Publish artifact if new model was registered"
     container: mlops
     timeoutInMinutes: 0
     steps:
