add docs and clean up naming

--- a/.pipelines/diabetes_regression-deploy.yml
+++ b/.pipelines/diabetes_regression-deploy.yml
@@ -16,7 +16,7 @@ resources:
     endpoint: acrconnection
   pipelines:
   - pipeline: model-train-ci
-    source: model-train-ci
+    source: Model-Train-Register-CI # Name of the triggering pipeline
     trigger:
       branches:
         - master
@@ -55,7 +55,6 @@ stages:
         scriptLocation: inlineScript
         workingDirectory: $(Build.SourcesDirectory)/$(SOURCES_DIR_TRAIN)/scoring
         inlineScript: |
-          set -e # fail on error
           az ml model deploy --name $(ACI_DEPLOYMENT_NAME) --model '$(MODEL_NAME):$(MODEL_VERSION)' \
           --ic inference_config.yml \
           --dc deployment_config_aci.yml \
@@ -100,10 +99,9 @@ stages:
         scriptLocation: inlineScript
         workingDirectory: $(Build.SourcesDirectory)/$(SOURCES_DIR_TRAIN)/scoring
         inlineScript: |
-          set -e # fail on error
           az ml model deploy --name $(AKS_DEPLOYMENT_NAME) --model '$(MODEL_NAME):$(MODEL_VERSION)' \
           --compute-target $(AKS_COMPUTE_NAME) \
-          --ic inference_config.yml \ 
+          --ic inference_config.yml \
           --dc deployment_config_aks.yml \
           -g $(RESOURCE_GROUP) --workspace-name $(WORKSPACE_NAME) \
           --overwrite -v
@@ -119,7 +117,6 @@ stages:
 
 - stage: 'Deploy_Webapp'
   displayName: 'Deploy to Webapp'
-  dependsOn: Deploy_ACI
   condition: and(succeeded(), variables['WEBAPP_DEPLOYMENT_NAME'])
   jobs:
   - job: "Package_Model"
