--- a/.pipelines/diabetes_regression-package-model-template.yml
+++ b/.pipelines/diabetes_regression-package-model-template.yml
@@ -25,6 +25,15 @@ steps:
       scriptLocation: inlineScript
       inlineScript: |
         set -e # fail on error
-        IMAGE_LOCATION=$(az ml model package --workspace-name $(WORKSPACE_NAME) -g $(RESOURCE_GROUP) --model '${{ parameters.modelId }}' --entry-script '${{ parameters.scoringScriptPath }}' --cf '${{ parameters.condaFilePath }}' --rt python --query 'location')
+
+        # Create model package using CLI
+        IMAGE_LOCATION=$(\
+        az ml model package --workspace-name $(WORKSPACE_NAME) -g $(RESOURCE_GROUP) \
+        --model '${{ parameters.modelId }}' \
+        --entry-script '${{ parameters.scoringScriptPath }}' \
+        --cf '${{ parameters.condaFilePath }}' \
+        --rt python --query 'location')
+
+        # Set environment variable
         echo $IMAGE_LOCATION
         echo "##vso[task.setvariable variable=IMAGE_LOCATION]$IMAGE_LOCATION"
