--- a/.pipelines/diabetes_regression-publish-model-artifact-template.yml
+++ b/.pipelines/diabetes_regression-publish-model-artifact-template.yml
@@ -1,4 +1,4 @@
-# Pipeline template that attempts to get the latest model version and adds it to the environment for subsequent tasks to use.
+# Pipeline template to check if a model was registered for the build and publishes an artifact with the model JSON
 steps:
 - task: AzureCLI@1
   displayName: 'Install AzureML CLI'
@@ -14,8 +14,14 @@ steps:
     workingDirectory: $(Build.SourcesDirectory)
     inlineScript: |
       set -e # fail on error
+
+      # Get the model using the build ID tag
       FOUND_MODEL=$(az ml model list -g $(RESOURCE_GROUP) --workspace-name $(WORKSPACE_NAME) --tag BuildId=$(modelbuildid) --query '[0]')
-      [[ -z "$FOUND_MODEL" ]] && { echo "Model not found" ; exit 1; }
+      
+      # If the variable is empty, print and fail
+      [[ -z "$FOUND_MODEL" ]] && { echo "Model was not registered for this run." ; exit 1; }
+
+      # Write to a file
       echo $FOUND_MODEL >model.json
   name: 'getversion'
   displayName: "Determine if evaluation succeeded and new model is registered (CLI)"
