--- a/.pipelines/diabetes_regression-train-register.yml
+++ b/.pipelines/diabetes_regression-train-register.yml
@@ -3,8 +3,7 @@
 resources:
   containers:
   - container: mlops
-    image: mlops/diabetes_regression
-    endpoint: acrconnection
+    image: mcr.microsoft.com/mlops/python:latest
 
 pr: none
 trigger:
