change param name

--- a/.pipelines/diabetes_regression-package-model-template.yml
+++ b/.pipelines/diabetes_regression-package-model-template.yml
@@ -31,7 +31,7 @@ steps:
         IMAGE_LOCATION=$(\
         az ml model package --workspace-name $(WORKSPACE_NAME) -g $(RESOURCE_GROUP) \
         --model '${{ parameters.modelId }}' \
-        --ic '${{ parameters.inferenceConfigPath }}' \
+        --ic '${{ parameters.inferencePath }}' \
         --rt python --query 'location')
 
         # Set environment variable
