--- a/.pipelines/diabetes_regression-ci-image.yml
+++ b/.pipelines/diabetes_regression-ci-image.yml
@@ -12,7 +12,6 @@ trigger:
     - master
   paths:
     include:
-    - ml_service/util/create_scoring_image.py
     - ml_service/util/Dockerfile
     - diabetes_regression/scoring/
     exclude:
@@ -26,18 +25,13 @@ container: mlops
 
 variables:
 - group: devopsforai-aml-vg
-- name: 'SCORE_SCRIPT'
-  value: 'scoring/scoreB.py'
 
 steps:
-- task: AzureCLI@1
-  inputs:
-    azureSubscription: '$(WORKSPACE_SVC_CONNECTION)'
-    scriptLocation: inlineScript
-    workingDirectory: $(Build.SourcesDirectory)
-    inlineScript: |
-      set -e
-      export SUBSCRIPTION_ID=$(az account show --query id -o tsv)
-      python3 -m ml_service.util.create_scoring_image
-  displayName: 'Create Scoring Image'
+- template: diabetes_regression-package-model-template.yml
+  parameters:
+    modelId: $(MODEL_NAME):$(MODEL_VERSION)
+    workingDirectory: '$(Build.SourcesDirectory)/$(SOURCES_DIR_TRAIN)/scoring'
+    inferencePath: 'inference_config.yml'
+- script: echo $(IMAGE_LOCATION) >image_location.txt
+  displayName: "Write image location file"
 
