Score copy step added

--- a/.env.example
+++ b/.env.example
@@ -26,6 +26,7 @@ MODEL_NAME = 'diabetes_regression_model.pkl'
 MODEL_VERSION = '1'
 TRAIN_SCRIPT_PATH = 'training/train.py'
 BATCHSCORE_SCRIPT_PATH = 'scoring/parallel_batchscore.py'
+BATCHSCORE_COPY_SCRIPT_PATH = 'scoring/parallel_batchscore_copyoutput.py'
 # AML Pipeline Config
 TRAINING_PIPELINE_NAME = 'Training Pipeline'
 MODEL_PATH = ''
@@ -54,10 +55,11 @@ ALLOW_RUN_CANCEL = 'true'
 AML_REBUILD_ENVIRONMENT = 'false'
 
 
-USE_GPU_FOR_TRAINING = "false"
+
 USE_GPU_FOR_SCORING = "false"
 # AML Compute Cluster Config for parallel batch scoring
 AML_ENV_NAME_SCORING='diabetes_regression_scoring_env'
+AML_ENV_NAME_SCORE_COPY='diabetes_regression_score_copy_env'
 AML_COMPUTE_CLUSTER_NAME_SCORING = 'score-cluster'
 AML_COMPUTE_CLUSTER_CPU_SKU_SCORING = 'STANDARD_DS2_V2'
 AML_CLUSTER_MAX_NODES_SCORING = '4'
