--- a/.pipelines/diabetes_regression-package-model-template.yml
+++ b/.pipelines/diabetes_regression-package-model-template.yml
@@ -32,7 +32,7 @@ steps:
         --model '${{ parameters.modelId }}' \
         --entry-script '${{ parameters.scoringScriptPath }}' \
         --cf '${{ parameters.condaFilePath }}' \
-        --rt python --query 'location')
+        --rt python --query 'location' -o tsv)
 
         # Set environment variable
         echo $IMAGE_LOCATION
