remove old env var and fix ab test

--- a/.pipelines/diabetes_regression-package-model-template.yml
+++ b/.pipelines/diabetes_regression-package-model-template.yml
@@ -35,7 +35,8 @@ steps:
         az ml model package --workspace-name $(WORKSPACE_NAME) -g $(RESOURCE_GROUP) \
         --model '${{ parameters.modelId }}' \
         --ic '${{ parameters.inferencePath }}' \
-        --rt python --query 'location' -o tsv)
+        --verbose \
+        --query 'location' -o tsv)
 
         # Set environment variable
         echo $IMAGE_LOCATION
