--- a/.pipelines/abtest.yml
+++ b/.pipelines/abtest.yml
@@ -40,12 +40,30 @@ stages:
       vmImage: 'ubuntu-latest'
     container: mlops
     steps:
-    - template: diabetes_regression-package-model-template.yml
-      parameters:
-        modelId: $(MODEL_NAME):$(MODEL_VERSION)
-        workingDirectory: '$(Build.SourcesDirectory)/$(SOURCES_DIR_TRAIN)/scoring'
-        inferencePath: 'inference_config.yml'
-        outputImageLocationPath: 'image_location.txt'
+    - task: AzureCLI@1
+    displayName: 'Install AzureML CLI'
+    inputs:
+      azureSubscription: '$(WORKSPACE_SVC_CONNECTION)'
+      scriptLocation: inlineScript
+      workingDirectory: $(Build.SourcesDirectory)
+      inlineScript: 'az extension add -n azure-cli-ml'
+    - task: AzureCLI@1
+      displayName: 'Create model package'
+      inputs:
+        azureSubscription: '$(WORKSPACE_SVC_CONNECTION)'
+        scriptLocation: inlineScript
+        inlineScript: |
+          set -e # fail on error
+
+          az ml model package --workspace-name $(WORKSPACE_NAME) -g $(RESOURCE_GROUP) \
+          --model '$(MODEL_NAME):$(MODEL_VERSION)' \
+          --entry-script '$(SCORE_SCRIPT)' \
+          --cf 'conda_dependencies.yml' \
+          --verbose \
+          --rt python --query 'location' -o tsv)
+
+    - script: echo $(IMAGE_LOCATION) >image_location.txt
+      displayName: "Write image location file"
 
     - publish: image_location.txt
       artifact: image_location
