--- a/.pipelines/abtest.yml
+++ b/.pipelines/abtest.yml
@@ -56,12 +56,16 @@ stages:
         inlineScript: |
           set -e # fail on error
 
+          IMAGE_LOCATION=$(\
           az ml model package --workspace-name $(WORKSPACE_NAME) -g $(RESOURCE_GROUP) \
           --model '$(MODEL_NAME):$(MODEL_VERSION)' \
           --entry-script '$(Build.SourcesDirectory)/$(SOURCES_DIR_TRAIN)/$(SCORE_SCRIPT)' \
           --cf '$(Build.SourcesDirectory)/$(SOURCES_DIR_TRAIN)/conda_dependencies.yml' \
           -v \
-          --rt python --query 'location' -o tsv
+          --rt python --query 'location' -o tsv)
+
+          echo $IMAGE_LOCATION
+          echo "##vso[task.setvariable variable=IMAGE_LOCATION]$IMAGE_LOCATION"
 
     - script: echo $(IMAGE_LOCATION) >image_location.txt
       displayName: "Write image location file"
